metadata/force-app/main/default/objects/CustomName_RQEJj__c/CustomName_RQEJj__c.object-meta.xml
<CustomObject>
    <description>Description_dIIHq</description>
    <label>CustomLabel_uNoZu</label>
    <nameField>
        <label>CustomLabel_uNoZu</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_uNoZus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>