metadata/force-app/main/default/objects/CustomName_RQEJj__c/fields/CustomField_hlETy__c.field-meta.xml
<CustomField>
    <fullName>CustomField_hlETy__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldrMXXx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>