metadata/force-app/main/default/objects/CustomName_RQEJj__c/fields/CustomField_sSrbz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_sSrbz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldInrce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>